CGE-135 fix bugs in createWrongPhoneNumbers()